12/22/12 collapse MTE view hierarchy to 2 nodes by consulting challenge.lineForm and challenge.manipulationMode
12/22/12 collapse MTE view hierarchy by consulting challenge.lineForm
12/22/12 move duplicate code into MTE_ChallengeNode base class
12/22/12 use PointSlopeLineNode throughout MTE challenges, because we don't show the equation on graphed lines
12/22/12 use PointSlopeLineNode throughout GTL challenges, because we don't show the equation on graphed lines
12/22/12 simplify GTL_GraphNode interface, don't need separate methods for creating answer and guess line nodes
12/22/12 fix RewardNode.setLevel so that we have a perfect-score reward for all levels
12/22/12 consolidate all game-model elements in one package
12/22/12 flatten MTE_Challenge hierarchy to one class (model for "Make the Equation" challenges)
12/22/12 flatten GTL_Challenge hierarchy to one class (model for "Graph the Line" challenges)
# 0.00.44 (71398) Dec 21, 2012
12/21/12 demonstrate "Place the Points" challenges for Game
12/21/12 simplify implementation of P3P challenges to 3 classes
12/21/12 add LineForm enum to game model
12/21/12 fix fractional y-intercepts in P3P challenges
12/21/12 a bit more refactoring of P3P view, to eliminate some duplicate code
12/21/12 refactor P3P challenges, move functionality to base classes, add support for slope-intercept
12/21/12 remove assertion from SlopeInterceptLineNode that disallows fractional y-intercept
12/21/12 prevent points from overlapping in "Place 3 Points" challenges
12/21/12 first pass at "Place 3 Points" for point-slope form (mostly working, a few warts)
12/21/12 remove ':' from sim title
12/21/12 add game levels 5 & 6, for testing "Place Points" challenges
12/21/12 make "correct answer" a slightly darker shade of green (from rgb=0,200,0 to 0,180,0)
12/20/12 move computations and tests related to fractional y-intercept into Fraction class
12/18/12 consolidate calls to Line.getYIntercept
# 0.00.43 (71362) Dec 18, 2012