@@ -26,7 +26,7 @@ import edu.umd.cs.piccolox.nodes.PComposite;
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
-public class GTL_PS_Points_ChallengeNode extends GTL_PS_ChallengeNode {
+public class GTL_PS_Points_ChallengeNode extends GTL_ChallengeNode {
 
     public GTL_PS_Points_ChallengeNode( final LineGameModel model, GTL_Challenge challenge, final GameAudioPlayer audioPlayer, PDimension challengeSize ) {
         super( model, challenge, audioPlayer, challengeSize );
